--- a/source/ui-material-grid/package.json
+++ b/source/ui-material-grid/package.json
@@ -24,6 +24,7 @@
         "@angular/router": "^6.0.3",
         "angular-in-memory-web-api": "^0.6.0",
         "core-js": "^2.5.4",
+        "ngx-color-picker": "^6.5.0",
         "rxjs": "^6.2.2",
         "zone.js": "^0.8.26"
     },
